--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -55,7 +55,7 @@
 	color: #5E9516;
 }
 .content{
-	background: url("../images/2.png") repeat;
+	/*background: url("../images/2.png") repeat;*/
 	margin-top: -40px;
 
 }
@@ -89,13 +89,17 @@ a:visited, a:hover, a:active{
 	color: #BCBCBC;
 }
 section .container{
-	margin-top: 40px;
+	margin: 40px;
 	-webkit-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
 	-moz-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
 	/*box-shadow: 2px 2px 10px 1px rgba(0,0,0,1);*/
 	box-shadow: 2px 2px 10px 1px rgb(0,0,0);
 }
-
+.github-mark{
+	width: 60px;
+	height: 60px;
+	margin: 10px;
+}
 #contact p{
 	margin: 0;
 	color: #0099FF;
