--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -89,7 +89,7 @@ a:visited, a:hover, a:active{
 	color: #BCBCBC;
 }
 section .container{
-	margin: 40px;
+	margin-top: 40px;
 	-webkit-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
 	-moz-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
 	/*box-shadow: 2px 2px 10px 1px rgba(0,0,0,1);*/
