--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -55,7 +55,7 @@
 	color: #5E9516;
 }
 .content{
-	/*background: url("../images/2.png") repeat;*/
+	background: url("../images/2.png") repeat;
 	margin-top: -40px;
 
 }
@@ -63,7 +63,7 @@
 	text-align: center;
 	font-size: 18px;
 	padding: 10px;
-	color: #A1A1A1;
+	color: #707070;
 }
 .year{
 	color: #0099FF;
@@ -82,11 +82,11 @@ a:visited, a:hover, a:active{
 }
 .awards{
 	font-size: 16px;
-	color: #A1A1A1;
+	color: #707070;
 }
 .awards li{
 	font-size: 18px;
-	color: #BCBCBC;
+	color: #6A6A6A;
 }
 section .container{
 	margin-top: 40px;
