--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,20 +1,47 @@
-.navbar-inverse .nav a{
-	font-size: 16px;
-	padding: 20px 15px;
+.navbar.navbar-inverse{
+	background: rgba(0,0,0,0.8);
+    border-bottom: 1px solid #585858;
 }
-.navbar-inverse{
-	background-color: white;
+.navbar{
+	padding: 10px 0px;
+}
+.navbar.navbar-inverse .nav > li > a {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFF;
+    opacity: .8;
+    transition: all .2s linear;
+    text-decoration: none;
+}
+.navbar.navbar-inverse .nav > li > a:hover, .navbar.navbar-inverse .nav > li > a:active {
+	color: #FFFFFF;
+	opacity: 1;
+}
+.navbar.navbar-inverse .nav > li.active > a {
+	/*color: #FFFFFF;*/
+	color: #0099FF;
+	opacity: 1;
+	background: none; 
+	box-shadow: none;
+	border-bottom: 2px solid #0099FF;
+}
+.navbar-nav{
+	float: right;
+}
+.navbar-brand{
+	font-size: 24px;
+	color: #0099FF !important;
 }
 .cover-image{
-	padding: 70px 0px 0px 0px;
+	padding: 85px 0px 0px 0px;
 	margin: 0px;
-	min-height: 650px;
-	background: url("../images/slider_cover.jpg") no-repeat center center;
+	min-height: 980px;
+	background: url("../images/5.png") no-repeat center center;
 	/*background: url("../images/slider_cover.jpg") no-repeat fixed;*/
 	background-size: cover;
 }
 .cover-text{
-	margin-top: 350px;
+	margin-top: 450px;
     text-align: center;
     vertical-align: middle;
     color: #FFF;
@@ -23,9 +50,9 @@
 .pattern-overlay{
 	background: rgba(0,0,0,0.5);
 	width: 100%;
-	min-height: 550px;
+	min-height: 920px;
 	padding: 0px;
-	margin-top: -10px;
+	margin-top: -15px;
 }
 /*.pattern-overlay{
 	background-image: url("../images/bg.png");
@@ -38,26 +65,13 @@
 @media (max-width: 992px) { 
 	.container{
 		width: 100%;
+		padding: 0px;
 	}
  }
-.navbar-inverse .nav .active a{
-	/*color: #0099FF;*/
-	color: #5E9516;
-}
-.navbar-brand{
-	font-size: 24px;
-	margin-top: 5px;
-	color: #0099FF !important;
-}
 .page-header{
 	text-align: center;
 	/*color: #0099FF;*/
 	color: #5E9516;
-}
-.content{
-	background: url("../images/2.png") repeat;
-	margin-top: -40px;
-
 }
 .wrapper{
 	text-align: center;
@@ -76,10 +90,6 @@ a:visited, a:hover, a:active{
 	padding: 10px;
 	text-align: justify;
 }
-
-.desc li{
-	font-size: 16px;
-}
 .awards{
 	font-size: 16px;
 	color: #707070;
@@ -88,12 +98,58 @@ a:visited, a:hover, a:active{
 	font-size: 18px;
 	color: #6A6A6A;
 }
-section .container{
+#education p{
+	margin: 0px;
+}
+#projects .carousel-inner .item{
+	min-height : 300px;
+}
+@media (max-width: 768px) { 
+	#projects .carousel-inner .item{
+		min-height: 350px;
+	}
+ }
+ @media (max-width: 600px) { 
+	#projects .carousel-inner .item{
+		min-height: 420px;
+	}
+ }
+#carousel-projects .carousel-caption{
+	text-align: right;
+	padding-right: 20px;
+	font-size: 14px;
+	padding: 10px;
+	left: 0;
+	right: 0;
+	bottom: 40px;
+}
+#carousel-projects .carousel-caption a{
+	padding: 10px;
+	background: rgba(0,0,0,0.7);
+}
+#carousel-projects .carousel-inner .item p:last-of-type{
+	padding-bottom: 50px;
+}
+#carousel-projects .carousel-indicators{
+	left: 0;
+	right: 0;
+	margin-left: 0;
+	text-align: left;
+	padding-left: 20px;
+	bottom: 15px;
+}
+#projects{
+	background-color: #1F1F1F;
+}
+/*section .container{
 	margin-top: 40px;
 	-webkit-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
 	-moz-box-shadow: 5px 5px 20px 1px rgba(0,0,0,1);
-	/*box-shadow: 2px 2px 10px 1px rgba(0,0,0,1);*/
+	box-shadow: 2px 2px 10px 1px rgba(0,0,0,1);
 	box-shadow: 2px 2px 10px 1px rgb(0,0,0);
+}*/
+.page-header{
+	border-bottom: none;
 }
 .github-mark{
 	width: 60px;
